--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@takumi-rs/image-response": "^0.57.3",
     "@vercel/analytics": "^1.6.1",
     "fumadocs-core": "16.2.3",
     "fumadocs-mdx": "14.1.0",
@@ -27,6 +28,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.7",
     "postcss": "^8.5.6",
